Fix alignment in the footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,10 +7,10 @@ footer {
 }
 
 footer div {
-	display: inline;
 	margin: 0 0.5rem;
+	margin-top: -0.2rem;
 }
 
-footer svg {
-	vertical-align: middle;
+footer a {
+	display: contents;
 }
